// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `<div />`;

exports[`12.c2 ItisIcon 12.c2.3 change prop 'icon-type' to 'excited' 1`] = `
<div
  icontype="excited"
/>
`;

exports[`12.c2 ItisIcon 12.c2.4 change prop 'icon-type' to 'loved' 1`] = `
<div
  icontype="loved"
/>
`;

exports[`12.c2 ItisIcon 12.c2.5 change prop 'icon-type' to 'happy' 1`] = `
<div
  icontype="happy"
/>
`;
